[package]
name = "websocket_rust_tokio"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tungstenite = "0.17.2"
tokio = { version = "1.17.0", features = ["full"] }
# url = "*"
# futures-util = "*"
# futures-channel = "*"
sha-1 = "0.10.0"
num_cpus = "1.13.1"