[package]
name = "rust_duino_miner"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# tungstenite = "0.17.2"
tokio = { version = "1.18.4", features = ["full"] }
# url = "*"
# futures-util = "*"
# futures-channel = "*"
sha-1 = "0.10.0"
num_cpus = "1.13.1"
clap = { version = "3.1.12", features = ["derive"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde = { version = "1.0.136", features = ["derive"] }
[profile.release]
opt-level = 3
lto = true